Extracted navbar into its own template, added is-active logic to nav-items, added basic leaderboard page

--- a/steps/templates/steps/base.html
+++ b/steps/templates/steps/base.html
@@ -17,37 +17,7 @@
   <link rel="stylesheet" href="{% static 'steps/main.css' %}" />
 </head>
 <body>
-
-  <!-- NAVBAR -->
-  <nav class="navbar is-primary" role="navigation" aria-label="main navigation">
-    <div class="navbar-brand">
-      <a class="navbar-item has-text-weight-bold" href="{% url 'steps-home' %}">
-        Step Challenges
-      </a>
-
-      <!-- Hamburger -->
-      <a
-        role="button"
-        class="navbar-burger"
-        aria-label="menu"
-        aria-expanded="false"
-        data-target="mainNavbar"
-      >
-        <span aria-hidden="true"></span>
-        <span aria-hidden="true"></span>
-        <span aria-hidden="true"></span>
-      </a>
-    </div>
-
-    <div id="mainNavbar" class="navbar-menu">
-      <div class="navbar-start">
-        <a class="navbar-item is-active" href="{% url 'steps-home' %}">Home</a>
-        <a class="navbar-item" href="">Leaderboard</a>
-        <a class="navbar-item">Past Challenges</a>
-        
-      </div>
-    </div>
-  </nav>
+  {% include "steps/includes/navbar.html" %}
 
   {% block content %} {% endblock %}
 
