--- a/steps/templates/steps/includes/navbar.html
+++ b/steps/templates/steps/includes/navbar.html
@@ -33,10 +33,28 @@
         <a class="navbar-item" href="">Past Challenges</a>
         {% if request.user.is_authenticated %}
             <a class="navbar-item">+ Add Steps</a>
-        {% else %}
-            <a class="navbar-item">Login</a>
         {% endif %}
         
+        </div>
+        <!-- RIGHT side -->
+        <div class="navbar-end">
+        {% if user.is_authenticated %}
+            <div class="navbar-item">
+            <span class="mr-2">Hi, {{ user.username }}</span>
+            <form method="post" action="{% url 'steps-logout' %}">
+                {% csrf_token %}
+                <button type="submit" class="button is-light">
+                    Log out
+                </button>
+            </form>
+            </div>
+        {% else %}
+            <div class="navbar-item">
+            <a class="button is-light" href="{% url 'steps-login' %}">
+                Log in
+            </a>
+            </div>
+        {% endif %}
         </div>
     </div>
 
