--- a/steps/templates/steps/includes/navbar.html
+++ b/steps/templates/steps/includes/navbar.html
@@ -32,7 +32,7 @@
         </a>
         <a class="navbar-item" href="">Past Challenges</a>
         {% if request.user.is_authenticated %}
-            <a class="navbar-item">+ Add Steps</a>
+            <a class="navbar-item" href="{% url 'steps-add-entry' %}">+ Add Steps</a>
         {% endif %}
         
         </div>
