--- a/steps/templates/steps/includes/navbar.html
+++ b/steps/templates/steps/includes/navbar.html
@@ -22,17 +22,16 @@
 
     <div id="mainNavbar" class="navbar-menu">
         <div class="navbar-start">
-        <a class="navbar-item {% nav_active 'steps-home' %}"
-            href="{% url 'steps-home' %}">
-            Home
-        </a>
         <a class="navbar-item {% nav_active 'steps-leaderboard' %}"
             href="{% url 'steps-leaderboard' %}">
             Leaderboard
         </a>
         <a class="navbar-item" href="">Past Challenges</a>
         {% if request.user.is_authenticated %}
-            <a class="navbar-item" href="{% url 'steps-add-entry' %}">+ Add Steps</a>
+            <a class="navbar-item {% nav_active 'steps-add-entry' %}" 
+                href="{% url 'steps-add-entry' %}">
+                + Add Steps
+            </a>
         {% endif %}
         
         </div>
