--- a/steps/templates/steps/includes/navbar.html
+++ b/steps/templates/steps/includes/navbar.html
@@ -1,76 +1,46 @@
 {% load nav_active %}
-
-<nav class="navbar is-primary" role="navigation" aria-label="main navigation">
+<nav class="navbar is-primary"
+     role="navigation"
+     aria-label="main navigation">
     <div class="navbar-brand">
-        <a class="navbar-item has-text-weight-bold" href="{% url 'steps-home' %}">
-        Step Challenges
-        </a>
-
+        <a class="navbar-item has-text-weight-bold"
+           href="{% url 'steps-home' %}">Step Challenges</a>
         <!-- Hamburger -->
-        <a
-        role="button"
-        class="navbar-burger"
-        aria-label="menu"
-        aria-expanded="false"
-        data-target="mainNavbar"
-        >
-        <span aria-hidden="true"></span>
-        <span aria-hidden="true"></span>
-        <span aria-hidden="true"></span>
+        <a role="button"
+           class="navbar-burger"
+           aria-label="menu"
+           aria-expanded="false"
+           data-target="mainNavbar">
+            <span aria-hidden="true"></span>
+            <span aria-hidden="true"></span>
+            <span aria-hidden="true"></span>
         </a>
     </div>
-
     <div id="mainNavbar" class="navbar-menu">
         <div class="navbar-start">
-        <a class="navbar-item {% nav_active 'steps-leaderboard' %}"
-            href="{% url 'steps-leaderboard' %}">
-            Leaderboard
-        </a>
-        <a class="navbar-item" href="">Past Challenges</a>
-        {% if request.user.is_authenticated %}
-            <a class="navbar-item {% nav_active 'steps-add-entry' %}" 
-                href="{% url 'steps-add-entry' %}">
-                + Add Steps
-            </a>
-        {% endif %}
-        
+            <a class="navbar-item {% nav_active 'steps-leaderboard' %}"
+               href="{% url 'steps-leaderboard' %}">Leaderboard</a>
+            <a class="navbar-item" href="">Past Challenges</a>
+            {% if request.user.is_authenticated %}
+                <a class="navbar-item {% nav_active 'steps-add-entry' %}"
+                   href="{% url 'steps-add-entry' %}">+ Add Steps</a>
+            {% endif %}
         </div>
         <!-- RIGHT side -->
         <div class="navbar-end">
-        {% if user.is_authenticated %}
-            <div class="navbar-item">
-            <span class="mr-2">Hi, {{ user.username }}</span>
-            <form method="post" action="{% url 'steps-logout' %}">
-                {% csrf_token %}
-                <button type="submit" class="button is-light">
-                    Log out
-                </button>
-            </form>
-            </div>
-        {% else %}
-            <div class="navbar-item">
-            <a class="button is-light" href="{% url 'steps-login' %}">
-                Log in
-            </a>
-            </div>
-        {% endif %}
+            {% if user.is_authenticated %}
+                <div class="navbar-item">
+                    <span class="mr-2">Hi, {{ user.username }}</span>
+                    <form method="post" action="{% url 'steps-logout' %}">
+                        {% csrf_token %}
+                        <button type="submit" class="button is-light">Log out</button>
+                    </form>
+                </div>
+            {% else %}
+                <div class="navbar-item">
+                    <a class="button is-light" href="{% url 'steps-login' %}">Log in</a>
+                </div>
+            {% endif %}
         </div>
     </div>
-
-    {% comment %} 
-
-      <a class="navbar-item {% nav_active 'steps-leaderboard' %}"
-         href="{% url 'steps-leaderboard' %}">
-         Leaderboard
-      </a>
-
-      <a class="navbar-item {% nav_active 'steps-past' %}"
-         href="{% url 'steps-past' %}">
-         Past Challenges
-      </a>
-
-      <a class="navbar-item {% nav_active 'steps-add' %}"
-         href="{% url 'steps-add' %}">
-         + Add Steps
-      </a> {% endcomment %}
 </nav>
