leaderboard page: adjust "Days so far annd days remaining" tag

--- a/steps/templates/steps/leaderboard.html
+++ b/steps/templates/steps/leaderboard.html
@@ -17,7 +17,7 @@
                 </span>
             {% else %}
                 <span class="tag is-info is-light is-medium">
-                    ⏳ Day {{ days_elapsed }}: {{ days_left }} day{{ days_left|pluralize }} remaining
+                    ⏳ Day {{ days_elapsed }} • {{ days_left }} day{{ days_left|pluralize }} remaining
                 </span>
             {% endif %}
         {% endif %}
