fixed challenge's total number of participants display

--- a/steps/templates/steps/home.html
+++ b/steps/templates/steps/home.html
@@ -138,7 +138,7 @@
               <p class="is-size-7 has-text-grey">Total steps</p>
             </div>
             <div class="column">
-              <p class="title is-5">{{ quick_stats.participants }}</p>
+              <p class="title is-5">{{ quick_stats.participant_count|default:"—" }}</p>
               <p class="is-size-7 has-text-grey">Participants</p>
             </div>
             <div class="column">
