--- a/steps/templates/steps/stepentry_form.html
+++ b/steps/templates/steps/stepentry_form.html
@@ -3,7 +3,7 @@
 {% block content %}
 <section class="section">
     <div class="container">
-        <div class="columns">
+        <div class="columns is-centered">
             <!-- LEFT COLUMN (WIDER) -->
             <div class="column is-6">
                 <h2 class="title is-4">Add Steps</h2>
