home: fixed missing close </div>

--- a/steps/templates/steps/home.html
+++ b/steps/templates/steps/home.html
@@ -85,11 +85,12 @@
                     </p>
                 {% endif %}
             </div>
-          <div class="column">
-            <a href="{% url 'steps-add-entry' %}"
-                class="button is-primary is-size-6 mt-3">
-                ➕ Add steps
-            </a>
+            <div class="column">
+                <a href="{% url 'steps-add-entry' %}"
+                    class="button is-primary is-size-6 mt-3">
+                    ➕ Add steps
+                </a>
+            </div>
           </div>
         </div>
       </div>
