--- a/steps/templates/steps/my_entries.html
+++ b/steps/templates/steps/my_entries.html
@@ -3,7 +3,7 @@
 <h2>My Step Entries</h2>
 <ul>
     {% for entry in object_list %}
-        <li>{{ entry.date }}: {{ entry.total_steps }} steps ({{ entry.challenge.name }})</li>
+        <li>{{ entry.date }}: {{ entry.daily_steps }} steps ({{ entry.challenge.name }})</li>
     {% empty %}
         <li>No entries yet.</li>
     {% endfor %}
